@@ -203,8 +203,7 @@ Startup()
   TopWindowStyle style;
   if (CommandLine::full_screen)
     style.FullScreen();
-  if (CommandLine::resizable)
-    style.Resizable();
+  style.Resizable();
 
   MainWindow *const main_window = CommonInterface::main_window =
     new MainWindow(CommonInterface::status_messages);
